Closed Bug 1717501 Opened 3 years ago Closed 2 years ago

Crash in [@ PLDHashTable::Search | mozilla::a11y::AccAttributes::GetAttribute]

Categories

(Core :: Disability Access APIs, defect)

x86_64
macOS
defect

Tracking

()

RESOLVED FIXED
99 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox-esr91 --- fixed
firefox89 --- unaffected
firefox90 --- unaffected
firefox91 --- wontfix
firefox96 --- wontfix
firefox97 --- wontfix
firefox98 --- fixed
firefox99 --- fixed

People

(Reporter: mccr8, Assigned: eeejay)

Details

(Keywords: crash, Whiteboard: [not-a-fission-bug])

Crash Data

Attachments

(1 file)

Maybe Fission related. (DOMFissionEnabled=1)

Crash report: https://crash-stats.mozilla.org/report/index/23c3c997-8a7a-4cc9-ba0e-eda380210615

Reason: EXC_BAD_ACCESS / KERN_INVALID_ADDRESS

Top 10 frames of crashing thread:

0 XUL PLDHashTable::Search const xpcom/ds/PLDHashTable.cpp:494
1 XUL mozilla::a11y::AccAttributes::GetAttribute accessible/base/AccAttributes.cpp:12
2 XUL mozilla::a11y::utils::GetAccAttr accessible/mac/MacUtils.mm:74
3 XUL -[mozAccessible moxRoleDescription] accessible/mac/mozAccessible.mm:534
4 XUL -[MOXAccessibleBase accessibilityAttributeValue:] accessible/mac/MOXAccessibleBase.mm:140
5 AppKit NSAccessibilityGetObjectForAttributeUsingLegacyAPI 
6 AppKit ___NSAccessibilityEntryPointValueForAttribute_block_invoke.805 
7 AppKit NSAccessibilityPerformEntryPointObject 
8 AppKit _NSAccessibilityEntryPointValueForAttribute 
9 AppKit -[NSObject _accessibilityValueForAttribute:clientError:] 

There aren't a ton of these crashes, but they are from more than one install date, and I figure there probably isn't a huge amount of people running Nightly on OSX with a11y. The stacks are a bit odd looking.

Severity: -- → S2

I see five crash reports from three different installations and all five crash reports have Fission enabled:

https://crash-stats.mozilla.org/signature/?signature=PLDHashTable%3A%3ASearch%20%7C%20mozilla%3A%3Aa11y%3A%3AAccAttributes%3A%3AGetAttribute&date=%3E%3D2020-12-25T19%3A05%3A00.000Z&date=%3C2021-06-25T19%3A05%3A00.000Z

Since almost 60% of Nightly users have Fission enabled, TBD whether this a11y crash is actually Fission-related.

Fission Milestone: --- → ?
Hardware: Unspecified → x86_64

kmag says this crash is probably not Fission related, so I will clear the Fission Milestone flag.

There have been no new crash reports after the first five reports from one user, so this crash is probably a low priority.

Fission Milestone: ? → ---
Whiteboard: [not-a-fission-bug]

https://support.mozilla.org/en-US/questions/1352124#answer-1447477

Product Firefox
Release Channel beta
Version 93.0rc1
Build ID 20210927210923 (2021-09-27)
OS OS X 10.15
OS Version 10.15.7 19H1323

bp-2a23f5fa-59cc-4553-bb51-293d20210930
bp-41db14ba-6b4e-4683-8554-d498c0210930
bp-12c51526-821f-4b4f-9ac9-e62f70210930

New crashes;

https://support.mozilla.org/en-US/questions/1359174

Product Firefox
Release Channel release
Version 94.0.1

bp-aa56feab-17e9-43e6-89e6-28c010211126
bp-60de3107-f370-47c2-a9d9-ea65c0211126
bp-697aa899-cb65-406f-a55e-d60b20211126 = Uptime 254 seconds (4 minutes and 14 seconds)

Signature: PLDHashTable::Search | mozilla::a11y::AccAttributes::GetAttribute
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
Product Firefox
Release Channel release
Version 94.0.2

bp-2e7d11aa-c0bd-4fc7-8953-c2fa00211126
bp-89f92912-805f-4f22-9fdb-f38f90211126
bp-7bd0015d-4e9c-4ed6-b528-289c00211126

Signature: PLDHashTable::Search | mozilla::a11y::AccAttributes::GetAttribute

Hi Jamie, this is one of the more frequent a11y crashes we're currently seeing in the wild. Can you help find someone to investigate? Thanks!

I guess Accessible::Attributes returns null for some reason, perhaps a dead RemoteAccessible? Eitan, would you mind looking into this?

Flags: needinfo?(jteh) → needinfo?(eitan)
Assignee: nobody → eitan
Flags: needinfo?(eitan)
Pushed by eisaacson@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/01ad3820abe4
Null check attributes in MacUtils::GetAccAttr. r=morgan
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 99 Branch

The patch landed in nightly and beta is affected.
:eeejay, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(eitan)

Comment on attachment 9263363 [details]
Bug 1717501 - Null check attributes in MacUtils::GetAccAttr. r?morgan

Beta/Release Uplift Approval Request

  • User impact if declined: Periodic crashes
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): This is a simple null check.
  • String changes made/needed:
Flags: needinfo?(eitan)
Attachment #9263363 - Flags: approval-mozilla-beta?

Comment on attachment 9263363 [details]
Bug 1717501 - Null check attributes in MacUtils::GetAccAttr. r?morgan

Approved for 98 beta 5, thanks.

Attachment #9263363 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

Comment on attachment 9263363 [details]
Bug 1717501 - Null check attributes in MacUtils::GetAccAttr. r?morgan

Simple null check for a pretty common crash, let's get this on ESR also. Approved for 91.7esr.

Attachment #9263363 - Flags: approval-mozilla-esr91+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: