Bug 1717501 - Null check attributes in MacUtils::GetAccAttr. r=morgan

Differential Revision: https://phabricator.services.mozilla.com/D138475